--- a/Week_1/MovieDB/res/values/strings.xml
+++ b/Week_1/MovieDB/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">MovieDB</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="search_movies">Search movies</string>
+    <string name="search_btn_text">Search</string>
 
 </resources>
